[gd_scene load_steps=14 format=1]

[ext_resource path="res://LevelEditor/EditorPiece.gd" type="Script" id=1]
[ext_resource path="res://EnemyPieces/Components/EnemyCollisionArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/slime_piece.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/grunt_piece.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/harpy_piece.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/gross_piece.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/werewolf_piece.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/dragon_piece.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/drakkar_piece.png" type="Texture" id=9]
[ext_resource path="res://EnemyPieces/Components/EnemyEffects.tscn" type="PackedScene" id=10]
[ext_resource path="res://EnemyPieces/Components/EnemyOverlayLayers.tscn" type="PackedScene" id=11]
[ext_resource path="res://EnemyPieces/Components/HealthDisplay.tscn" type="PackedScene" id=12]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 3 ) ], "loop":true, "name":"slime", "speed":5.0 }, { "frames":[ ExtResource( 4 ) ], "loop":true, "name":"grunt", "speed":5.0 }, { "frames":[ ExtResource( 5 ) ], "loop":true, "name":"fortifier", "speed":5.0 }, { "frames":[ ExtResource( 6 ) ], "loop":true, "name":"grower", "speed":5.0 }, { "frames":[ ExtResource( 7 ) ], "loop":true, "name":"melee", "speed":5.0 }, { "frames":[ ExtResource( 8 ) ], "loop":true, "name":"ranged", "speed":5.0 }, { "frames":[ ExtResource( 9 ) ], "loop":true, "name":"drummer", "speed":5.0 } ]

[node name="EditorPiece" type="KinematicBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="CollisionArea" parent="." instance=ExtResource( 2 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 0, -5 )
frames = SubResource( 1 )
animation = "grunt"

[node name="EnemyEffects" parent="." instance=ExtResource( 10 )]

editor/display_folded = true
transform/pos = Vector2( 0, -5 )

[node name="EnemyOverlays" parent="." instance=ExtResource( 11 )]

editor/display_folded = true
transform/pos = Vector2( 0, -5 )

[node name="HealthDisplay" parent="." instance=ExtResource( 12 )]


[editable path="EnemyEffects"]
[editable path="EnemyOverlays"]
